[gd_scene load_steps=7 format=3 uid="uid://biva1tfp64phd"]

[ext_resource type="Script" uid="uid://bhknfatake4qo" path="res://scenes/gameUI/game_over_overlay.gd" id="1_x5omy"]
[ext_resource type="FontFile" uid="uid://dmdt6ucsbmqe7" path="res://scenes/gameUI/fonts/Super Squad.otf" id="2_i5au4"]
[ext_resource type="AudioStream" uid="uid://0vxhu7mwqyhh" path="res://music/orchestral-win-331233.mp3" id="3_36qq1"]
[ext_resource type="Theme" uid="uid://dw33yhp6pcuki" path="res://scenes/button_theme.tres" id="3_tqq2k"]
[ext_resource type="StyleBox" uid="uid://c6o8mfpxp817v" path="res://scenes/gameUI/game_over_style_box_flat.tres" id="4_bu6ls"]

[sub_resource type="LabelSettings" id="LabelSettings_i25hf"]
font = ExtResource("2_i5au4")
font_size = 75
font_color = Color(0.606819, 0, 0.0771316, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="GameOverOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5omy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0, 0, 0.819608)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "THEY DIED"
label_settings = SubResource("LabelSettings_i25hf")

[node name="RestartLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tqq2k")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = ExtResource("4_bu6ls")
text = "Restart Level"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_tqq2k")
theme_override_styles/normal = ExtResource("4_bu6ls")
text = "Main Menu
"

[node name="YouWonAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_36qq1")
